Changed banner and some warnings fix