@@ -2,8 +2,6 @@ package com.freelance.app.config;
 
 import ch.qos.logback.classic.spi.ILoggingEvent;
 import ch.qos.logback.core.pattern.CompositeConverter;
-import java.util.Collections;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import org.slf4j.Marker;
@@ -32,15 +30,22 @@ public class CRLFLogConverter extends CompositeConverter<ILoggingEvent> {
     private static final Map<String, AnsiElement> ELEMENTS;
 
     static {
-        Map<String, AnsiElement> ansiElements = new HashMap<>();
-        ansiElements.put("faint", AnsiStyle.FAINT);
-        ansiElements.put("red", AnsiColor.RED);
-        ansiElements.put("green", AnsiColor.GREEN);
-        ansiElements.put("yellow", AnsiColor.YELLOW);
-        ansiElements.put("blue", AnsiColor.BLUE);
-        ansiElements.put("magenta", AnsiColor.MAGENTA);
-        ansiElements.put("cyan", AnsiColor.CYAN);
-        ELEMENTS = Collections.unmodifiableMap(ansiElements);
+        ELEMENTS = Map.of(
+            "faint",
+            AnsiStyle.FAINT,
+            "red",
+            AnsiColor.RED,
+            "green",
+            AnsiColor.GREEN,
+            "yellow",
+            AnsiColor.YELLOW,
+            "blue",
+            AnsiColor.BLUE,
+            "magenta",
+            AnsiColor.MAGENTA,
+            "cyan",
+            AnsiColor.CYAN
+        );
     }
 
     @Override
